# llm-recall-app

./: README.md  package-lock.json  package.json
.context/: CONTEXT.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_code.rs  cursor.rs  lib.rs  main.rs  types.rs
src/components/: ConversationList.tsx  MessageThread.tsx  Sidebar.tsx
src/hooks/: useDebounce.ts
src/lib/: search.ts  types.ts
